Move tileset creation into a new TilesetTarget